--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="script.js" defer></script>
 </head>
 <body>
-    <button>rock</button>
-    <button>paper</button>
-    <button>scissor</button>
+    <button id="button-choose">Choose your tool</button>
+
 </body>
 </html>
